--- a/medusa/Dockerfile
+++ b/medusa/Dockerfile
@@ -1,10 +1,12 @@
 FROM node:22
 
-RUN corepack enable
+RUN corepack enable && corepack prepare yarn@4.7.0 --activate
 
 WORKDIR /app
 
-COPY package.json yarn.lock ./
+COPY package.json yarn.lock .yarnrc.yml ./
+
+COPY .yarn ./.yarn
 
 RUN yarn install
 
