--- a/medusa/Dockerfile
+++ b/medusa/Dockerfile
@@ -1,15 +1,17 @@
-FROM node:20-alpine
+FROM node:20-alpine AS base
 
+# Install dependencies only when needed
+FROM base AS builder
+RUN corepack enable
+# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
+RUN apk add --no-cache libc6-compat
 WORKDIR /app
-
-# Enable Corepack and prepare latest Yarn (4+)
-RUN corepack enable && corepack prepare yarn@stable --activate
 
 COPY package.json yarn.lock ./
 
 RUN yarn install --immutable
 
-COPY . .
+COPY ./src ./src
 
 RUN yarn build
 
