--- a/medusa/Dockerfile
+++ b/medusa/Dockerfile
@@ -7,7 +7,7 @@ RUN corepack enable
 RUN apk add --no-cache libc6-compat
 WORKDIR /app/mudusa
 
-COPY package.json yarn.lock ./
+COPY package.json yarn.lock .yarnrc.yml ./
 
 RUN yarn install --immutable
 
