--- a/medusa/Dockerfile
+++ b/medusa/Dockerfile
@@ -5,6 +5,7 @@ FROM base AS builder
 RUN corepack enable
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
 RUN apk add --no-cache libc6-compat
+RUN apk add --no-cache ca-certificates
 WORKDIR /app/medusa
 
 COPY package.json yarn.lock .yarnrc.yml ./
